--- a/glitchtools/core/templates/glitchtools/core/layout.html
+++ b/glitchtools/core/templates/glitchtools/core/layout.html
@@ -13,6 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="{{ STATIC_URL }}/favicon.ico">
   <link rel="apple-touch-icon" href="{{ STATIC_URL }}/apple-touch-icon.png">
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
   <script src="{{ STATIC_URL }}js/libs/modernizr-1.7.min.js"></script>
 </head>
