--- a/glitchtools/core/templates/glitchtools/core/layout.html
+++ b/glitchtools/core/templates/glitchtools/core/layout.html
@@ -1,3 +1,5 @@
+{% load url from future %}
+{% load i18n %}
 <!doctype html>
 <!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
 <!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
@@ -21,7 +23,14 @@
   <div id="container">
     <header>
       <div id="logo">Glitch Plus</div>
-
+      <div id="usernav">
+        {% if user.is_authenticated %}
+        <a href="#">{{ user.username }}</a>
+        <a href="{% url 'glitchtools-users-logout' %}?next={{ request.get_full_path }}">{% trans 'Logout' %}</a>
+        {% else %}
+        <a href="{% url 'glitchtools-users-login' %}?next={{ request.get_full_path }}">{% trans 'Login' %}</a>
+        {% endif %}
+      </div>
     </header>
 
     <div id="main" role="main">
