--- a/glitchtools/core/templates/glitchtools/core/layout.html
+++ b/glitchtools/core/templates/glitchtools/core/layout.html
@@ -18,6 +18,7 @@
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css">
   <script src="{{ STATIC_URL }}js/libs/modernizr-1.7.min.js"></script>
+  {% block extrahead %}{% endblock %}
 </head>
 <body>
   <div id="container">
@@ -49,5 +50,6 @@
   <script src="{{ STATIC_URL }}js/libs/dd_belatedpng.js"></script>
   <script> DD_belatedPNG.fix('img, .png_bg');</script>
   <![endif]-->
+  {% block javascript %}{% endblock %}
 </body>
 </html>
